--- a/report/discussion.tex
+++ b/report/discussion.tex
@@ -1,4 +1,12 @@
 \section{Discussion}\label{sec:disscussion}
 
+In this study we have seen how the integrator methods Euler, Backward Euler and RK4 compare against each other, and also to the real world. Both in the analysis and in the Mercury orbit simulation shows that RK4 is superior. As the energy conservation in an error margin 10 magnitudes higher than the other two methods fig. \ref{fig:euler_energy_cons} \ref{fig:back_euler_energy_cons} \ref{fig:rk4_energy_cons}, and for the orbit precession 1 magnitude lower \ref{fig:precession_analysis}. With regards to the Mercury simulations has RK4 a variance of 4 magnitudes lower tab. \ref{tab:results}, where it can be speculated this has to do with its excellent energy conservation. 
 
+Turning the highlight to the other two integrators, Euler and Backward Euler, it is widely regarded that the latter is more stable. However, as evident in the energy analysis results, this shows not to be true here. Backward Euler looses more energy and the amplitude of the oscillations diminish at a faster pace than that of the Euler method, which can be seen by fcomparing fig. \ref{fig:euler_energy_cons} and \ref{fig:euler_energy_cons}. The cause of this might be due to the more complex nature of the method itself. 
+
+Because the Backward Euler method incorporates the Jacobian of the equations of motion \eqref{eq:eoms}, and the fact that the these equations are not "trivial" there could have been a minor error in the derivatives which could cause the drop in energy. Going from the presumption that these are correct, it could also be that the Newton method threshold is too high. The effect this parameter has on the integration is something that could be investigated in future works. 
+
+Disscusing the Mercury orbit results in general, even though the resulting orbital times are close to observed values \cite{nasa_mercury}, the precession and aphelion was not. What this implies is that the orbit time is a quite robust property of these kinds of simulated systems, while both the precession and perihelion is not. Because the RK4 precession did not (practically) change with larger timesteps, and all methods had the same precession for Mercury, it insinuates that lower time steps could not have solved this discrapency. 
+
+In summary, using numerical integrators to solve relativistic equations for orbital motion is plauible to say the least. Comparing Euler, Backward Euler and RK4 has shown that RK4 is more robust than the other two, and results hint at Backward Euler's complexity makes difficult to utilize for complex problems such as this. While the simulated orbit times agree with observed values within a margin of 2 days, the perihelion precession does not as it differs by many magnitudes of radians per century, thus making these methods not suitable for longer simulations than the scope of this study's. However, numerical simulation using especially RK4 shows promise in studying relativistic orbital mechanics. 
 
