--- a/report/references.bib
+++ b/report/references.bib
@@ -7,14 +7,32 @@
 	year={2019}
 }
 
-@book{gould_2007,
-  title={An Introduction to Computer Simulation Methods: Applications to Physical Systems},
-  author={Gould, H. and Tobochnik, J. and Christian, W.},
-  isbn={9780805377583},
-  lccn={2005030858},
-  url={https://books.google.se/books?id=SAxBAQAAIAAJ},
-  year={2007},
-  publisher={Pearson Addison Wesley}
+@book{gould_2007, 
+	title={An Introduction to Computer Simulation Methods: Applications to Physical Systems},
+	author={Gould, H. and Tobochnik, J. and Christian, W.},
+	isbn={9780805377583},
+	lccn={2005030858},
+	url={https://books.google.se/books?id=SAxBAQAAIAAJ},
+	year={2007},
+	publisher={Pearson Addison Wesley}
+}
+
+@misc{wiki_precession, 
+	title={Tests of general relativity}, 
+	howpublished={\url{https://en.wikipedia.org/wiki/Tests_of_general_relativity}},
+  	note={Accessed: 2023-01-11}
+}
+
+@misc{wiki_sun, 
+	title={Solar mass}, 
+	howpublished={\url{https://en.wikipedia.org/wiki/Tests_of_general_relativity}},
+	note={Accessed: 2023-01-11}
+}
+
+@misc{nasa_mercury, 
+	title={Mercury Fact Sheet}, 
+	howpublished={\url{https://nssdc.gsfc.nasa.gov/planetary/factsheet/mercuryfact.html}},
+  	note={Accessed: 2023-01-05}
 }
 
 
