--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -2,7 +2,7 @@
 
 \subsection{Theoretical background}
 
-In general relativity (GR) is one of the more central and useful properties the \textit{metric}. We recall that in GR are there three spatial coordinates ($x, y, z$) and one time componen ($y$). These four quantities make ut a space time coordinate, which describes a spatial point in time. The universe can be thought of consisting of a grid-like blanket (mathematically it is called a \textit{manifold})which describes the space time. The "blanket" can be be folded and creased describing disturbances made by massive objects in space. However, because the universe is infinite, where is origo found?
+In general relativity (GR) is one of the more central and useful properties the \textit{metric}. We recall that in GR are there three spatial coordinates ($x, y, z$) and one time componen ($y$). These four quantities make ut a space time coordinate, which describes a spatial point in time. The universe can be thought of consisting of a grid-like blanket (mathematically it is called a \textit{manifold}) which describes the space time. The "blanket" can be be folded and creased describing disturbances made by massive objects in space. However, because the universe is infinite, where is origo found?
 
 In the euclidian coordinate system vectors are used to describe the distance in a certain direction. In GR it is more useful to define a \textit{tangent basis}, which instead describes the change of the coordinates in a certain direction (simply put). To then describe distance, one cannot just study the vectors. This is where the metric comes in, as it describes how the manifold changes in certain directions. The notion of lengths the comes in the form of an infitesimal distance with the line segment \cite{guidry_2019}:
 
@@ -34,17 +34,9 @@ In order to be able to numerically study this, the EOM is needed, which are give
 and can be obtained using the Euler-Lagrange equations on \eqref{eq:schwarzschild-metric}. 
 
 \subsection{The problem}
-Two things have been studied. Firstly, becasue numerical methods are a tool to try to model reality. Naturally, the integrators will be used to calculate the orbit time of Mercury around the Sun, and compare it to observed values. Secondly is the Schwarzschild radius interesting as well, and we will thus try to calculate it using the integrators by letting a body fall without any angular velocity. The integrators Euler method, Backward Euler and Runge-Kutta 4 (RK4) will be used. 
+Numerical methods are a tool to model reality. In reality is Mercury close enough to the Sun for relativistic effects to affect tye system \cite{wiki_precession}. Thus will we calculate the orbit time and periohelion precession of Mercury around the Sun, and compare it to observed values.  
 
-In addition to this, we also want to study how the integrators compare and will be done through analysis of energy conservation and error propagation.
+In order to solve the equations of motion we will use three different numerical integrators: Euler method, Backward Euler and Runge-Kutta 4 (RK4). In addition to the main goals, we also want to study how the integrators compare and will be done through analysis of energy conservation and error propagation.
 
-
-% Describing the paper
-\subsection{The integrators used}
-In this study will Euler Method, Euler Back and Runge Kutte 4 (RK4) be used. The former is included more of as a comparitor, as the error of the method often scales linearily with the time step which enables us to study the other two through the means of comparing it to this preidctable error. 
-
-In section \ref{sec:method} will the different numerical methods used be described and how the discritezation is done. Followed by that, in \ref{sec:results} will the results of the methods be portrayed by studying the conservation of energy and error. Finally, in \ref{sec:disscussion} will the results be discussed in a detailed manner, comparing the results and making concluding remarks. 
-
-
-
+In section \ref{sec:method} will the different numerical methods used be described and how the discritezation is done. Followed by that, in \ref{sec:results} will the orbit of Mercury be simulated, with the analysis of the integrators used.  Finally, in \ref{sec:disscussion} will the results be discussed, comparing the results and making concluding remarks. 
 
